--- a/index.html
+++ b/index.html
@@ -78,10 +78,9 @@
     EDUCATIONS
     <img src="rocket.png" class="icons icons-right" alt="Right Icon"> </h2>
     <ul> 
-        <li> <br>   PG- master in computer science (MCS)   <br>  BAMU University  <br>   SGPA 9.31    <br>      May 2022 - April 2024   <br> <br>  </li>
+        <li> <br>   PG- MCS master in computer science    <br>  BAMU University  <br>   SGPA 9.31    <br>      May 2022 - April 2024   <br> <br>  </li>
         <li> <br>   Fullstack Web Developer   <br>  Udemy Education  <br>   PASS    <br>      June 2022 - November 2022   <br> <br>  </li>
-        <li> <br>     UG- B.SC Forensic science   <br>  BAMU University  <br>    73.84%      <br>           May 2019- May 2022 <br> <br>  </li>
-        <li> <br>  Certified Ethical Hacker V11  <br>  |Mr. web Secure Mumbai        <br>   PASS  <br>       January 2021- October 2021    <br> <br>  </li>
+        <li> <br>     UG- B.SC   <br>  BAMU University  <br>    73.84%      <br>           May 2019- May 2022 <br> <br>  </li>
         <li> <br>     IIT JEE-MAIN  <br>  National testing agency, India    <br>            79%      <br>         January 2018- December 2019     <br> <br>  </li>
         <li> <br>     12th HSC  <br>  Maharashtra state board, India    <br>            48%      <br>         Jun 2018- May 2019     <br> <br>  </li>
         <li> <br>     10th SSC  <br>  Maharashtra state board, India    <br>            77%      <br>         Jun 2016- may 2017     <br> <br>  </li>
@@ -113,21 +112,16 @@
   <div class="social-box-container">
         <h2>Follow Me</h2>
         <div class="social-icons">
-            <a href="https://www.instagram.com/rushii.borude?igsh=MTVmMW1yaTRpODV5cA=="     target="_blank"    ><img src="instagram.png" alt="Instagram"></a>
             <a href="https://www.linkedin.com/in/rushikesh-borude-23b380198?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"  > <img src="linkedin.png" alt="LinkedIn"></a>
-            <a href="https://wa.me/YOUR_NUMBER "  target="_blank"  ><img src="whatsapp.png" alt="whatsapp"></a>
             <a href=" https://mail.google.com/mail/u/0/#inbox" target="_blank"   ><img src="gmail.png" alt="Gmail"></a>
-            <a href="https://youtube.com/@rushi.borude?si=_mmlmaa_HSQN1gs1 "  target="_blank"  ><img src="youtube.png" alt="YouTube"></a>
-            <a href="https://x.com/Offical_Rushi?t=2Gk8j4YEvv8FxZJLcS5vDA&s=09" target="_blank"  ><img src="twitter.png" alt="Twitter"></a>
-            <!-- <a href="https://www.snapchat.com/add/rushii_offical?share_id=AQJCkzHx1FM&locale=en-IN" target="_blank" ><img src="snapchat.png" alt="Snapchat"></a> -->
-            <!-- <a href="https://www.tiktok.com/@rushi_borude?_r=1&_d=ej49dc9g0ei3jd&sec_uid=MS4wLjABAAAAxjnxRnw_G419as2B4PLJjKPoT0mnXUt3EK6TmUpQmx0GLhobAsAG3F_22iytlx6Y&share_author_id=7149392890542720006&sharer_language=en&source=h5_m&u_code=e45b327970581e&timestamp=1742041888&user_id=7149392890542720006&sec_user_id=MS4wLjABAAAAxjnxRnw_G419as2B4PLJjKPoT0mnXUt3EK6TmUpQmx0GLhobAsAG3F_22iytlx6Y&utm_source=copy&utm_campaign=client_share&utm_medium=android&share_iid=7477103149091047190&share_link_id=858e8687-2a2d-4eee-8530-38930fbe19f2&share_app_id=1233&ugbiz_name=ACCOUNT&ug_btm=b8727%2Cb0229&social_share_type=5&enable_checksum=1" target="_blank" ><img src="tiktok.png" alt="TikTok"></a> -->
             <a href="https://docs.google.com/document/d/1K156qRt7rk5h2VrBIg26aRGas8DB57ednZcmgFstmBk/edit?usp=drive_link" target="_blank"   ><img src="cv.png" alt="Gmail"></a>
         </div>
         
     </div>
-    <br> <br> Rushiborude1971@gmail.com   |     +91 8329436643 <br> <br> All Right Reserved By @Rushiksh Borude 
+    <br> <br> Rushiborude1971@gmail.com  <br> <br> All Right Reserved By @Rushiksh Borude 
 </div>
 
 
 </body>
 </html>
+
