--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="header">Portfolio</div>
     <div class="hero">
-        <img src="Rushi.jpg" alt="Profile Picture">
+        <img src="neo.jpg" alt="Profile Picture">
         <div class="text-box">
             <p>Rushikesh Borude</p> 
             <p> software engineer </p> 
@@ -124,4 +124,5 @@
 
 </body>
 </html>
+
 
