--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-container">
-            <h3 class="hero-title">
+            <h5 class="hero-title">
                 <span class="hero-nexus">Rushikesh</span><span class="hero-flow">Borude</span>
-            </h3>
-            <p class="hero-subtitle">☘️ Software Engineer <br> Creator 👽 Fitness  <br> 🌍 Universe Explorer   </p>
+            </h5>
+            <p class="hero-subtitle">Software Engineer ☘️ Creator<br>Fitness 🌍 Universe Explorer</p>
           
         <div class="social-icons">
             <a href="https://www.linkedin.com/in/rushikesh-borude-23b380198?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"  > <img src="images/linkedin.png" alt="LinkedIn"></a>
@@ -97,12 +97,10 @@
 
     <!-- Footer -->
     <footer class="footer">
+        
         <div class="footer-content">
-
-
-            <div class="footer-bottom">
-                <h2 style="text-align: center; align-items: center;"> stay toon .. </h2>
-                <p class="footer-credit">&copy; 2025 All realities reserved. <a href="SE/R.html">SE </a></p>
+            <div class="footer-bottom">                
+                <p class="footer-credit">&copy; stay toon.. © 2025-26 ARR <a href="SE/R.html">SE </a></p>
                 <p class="footer-credit">develop by <a href="https://www.linkedin.com/in/rushikesh-borude-23b380198?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" rel="noopener nofollow">Rushikesh Borude</a></p>
             </div>
         </div>
@@ -112,5 +110,6 @@
 </body>
 
 </html>
+
 
 
