--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
             <h5 class="hero-title">
                 <span class="hero-nexus">Rushikesh</span><span class="hero-flow">Borude</span>
             </h5>
-            <p class="hero-subtitle">Software Engineer ☘️ Creator<br>Fitness 🌍 Universe Explorer</p>
-          
+            <p class="hero-subtitle"> ☘️ Software Engineer <br> Creator 👽 Fitness <br>🌍 Universe Explorer </p>
+
+            <p class="footer-credit"> ☘️ Software Engineer <br> Creator 👽 Fitness <br>🌍 Universe Explorer  </a></p>
+            
         <div class="social-icons">
             <a href="https://www.linkedin.com/in/rushikesh-borude-23b380198?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"  > <img src="images/linkedin.png" alt="LinkedIn"></a>
             <a href="https://www.instagram.com/rushikesh__borude?igsh=MTVmMW1yaTRpODV5cA==" target="_blank"   ><img src="images/instagram.png" alt="instagram"></a>
@@ -110,6 +112,7 @@
 </body>
 
 </html>
+
 
 
 
