--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <a href="https://www.instagram.com/rushikesh__borude?igsh=MTVmMW1yaTRpODV5cA==" target="_blank"   ><img src="images/instagram.png" alt="instagram"></a>
             <a href=" youtube.com/" target="_blank"   ><img src="images/youtube.png" alt="youtube"></a>
             <a href="https://www.snapchat.com/add/boruderushikesh?share_id=7_ozdTDi32U&locale=en-IN" target="_blank"   ><img src="images/snapchat.png" alt="snapchat"></a>
-            <a href=" https://wa.me/918329436643" target="_blank"   ><img src="images/whatsapp.png" alt="whataspps"></a>
+            <a href="  https://www.tiktok.com/@rushikesh__borude?_r=1&_t=ZS-93nulootXds " target="_blank"   ><img src="images/tiktok.png" alt="TikTok"></a>
             <a href="https://www.facebook.com/share/1AFQohiiHH/" target="_blank"   ><img src="images/facebook.png" alt="facebook"></a>    
             <a href=" https://x.com/rushikes_borude?t=GGLvPBoXnucLs8SFaXfzLQ&s=09" target="_blank"   ><img src="images/x.png" alt="x"></a>
        
@@ -111,6 +111,7 @@
 </body>
 
 </html>
+
 
 
 
